# factoryguard-api

./: .gitignore  Dockerfile  LICENSE.TXT  README.md  config.toml  docker-compose.yml  fix_httpx_negociacion.patch  fix_httpx_restaurado.patch  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: classification_report.md  domain_expert_report.md  multiagent_negotiation.md
scripts/: download_ai4i_dataset.py  run_qa.py  train_classifier.py
src/: report.py
src/adapters/: mock_parts_supplier.py
src/agent/: rag_agent.py
src/agent_orchestrator/: graph.py  negotiation.py
src/alert/: alert_manager.py
src/api/: main.py
src/app/: dashboard.py
src/app/pages/: chat.py
src/core/: dsp.py
src/database/: db_manager.py
src/monitor/: monitor.py
src/pipeline/: analisis.py  ingesta.py
src/report/: pdf_generator.py  rich_report.py
src/services/: fault_classifier.py
src/tests/: test_agent_orchestrator.py  test_analytics.py  test_classifier.py  test_cloud_mode.py
