[project]
name = "industrial-ai-prognostics"
version = "2.0.1"
description = "Sistema de Pronóstico Industrial con RAG, Alertas y Multi-Activo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andres Guzman", email = "mectrftion@gmail.com"}
]
dependencies = [
    "numpy>=1.24,<2",
    "polars>=1.10.0",
    "scipy>=1.13.0",
    "streamlit>=1.37.0",
    "plotly>=5.24.0",
    "matplotlib>=3.9.0",
    "rich>=13.9.0",
    "pytest>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "reportlab>=4.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
markers = [
    "stress: pruebas de rendimiento (requiere servidor activo)",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["tests/"]
